<resources>
    <string name="app_name">datarumah</string>
    <string name="action_search">Search</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_page_off_1">1 dari 6 Halaman</string>
    <string name="title_page_off_2">2 dari 6 Halaman</string>
    <string name="title_page_off_3">3 dari 6 Halaman</string>
    <string name="title_page_off_4">4 dari 6 Halaman</string>
    <string name="title_page_off_5">5 dari 6 Halaman</string>
    <string name="title_page_off_6">6 dari 6 Halaman</string>
    <string name="title_des_kel">1. Desa / Kelurahan</string>
    <string name="hint_des_kel">Desa / Kelurahan</string>
    <string name="title_kec">2. Kecamatan</string>
    <string name="hint_kec">Kecamatan</string>
    <string name="title_kot_kab">3. Kabupaten/Kota</string>
    <string name="hint_kot_kab">Kabupaten/Kota</string>
    <string name="title_prov">4. Provinsi</string>
    <string name="hint_prov">Provinsi</string>
    <string name="title_house_num">1. Nomor Urut Rumah :</string>
    <string name="title_full_name">2. Nama Lengkap :</string>
    <string name="title_age">3. Usia (Tahun) :</string>
    <string name="title_last_education">4. Pendidikan Terakhir :</string>
    <string name="title_sex">5. Jenis Kelamin :</string>
    <string name="title_full_address">6. Alamat Lengkap :</string>
    <string name="title_coordinates_point">7. Titik Koordinat Lokasi :</string>
    <string name="hint_coordinates_point">Tentukan Koordinat Lokasi</string>
    <string name="title_ktp_nik_number">8. Nomor KTP (NIK) :</string>
    <string name="title_num_of_families_in_house">9. Jumlah Kepala Keluarga dalam 1 Rumah :</string>
    <string name="title_main_work">10. Pekerjaan Utama :</string>
    <string name="title_monthly_income_or_expenses">11. Penghasilan atau Pengeluaran Perbulan :</string>
    <string name="title_land_ownership_status">12. Status Kepemilikan Tanah :</string>
    <string name="title_house_ownership_status">13. Status Kepemilikan Rumah :</string>
    <string name="title_home_assets_elsewhere">14. Aset Rumah Ditempat Lain :</string>
    <string name="title_land_assets_elsewhere">15. Aset Tanah Ditempat Lain :</string>
    <string name="title_housing_donation">16. Pernah Mendapatkan Bantuan Perumahan :</string>
    <string name="title_area_type">17. Jenis Kawasan Lokasi Rumah yang Ditempati :</string>
    <string name="title_foundation">1. Pondasi :</string>
    <string name="title_construction_conditions">2. Kondisi Kolom dan Balok :</string>
    <string name="title_roof_construction_conditions">3. Kondisi Konstruksi Atap :</string>
    <string name="title_windows_or_light_holes">1. Jendela/Lubang Cahaya :</string>
    <string name="title_ventilation">2. Ventilasi :</string>
    <string name="title_bathroom_ownership">3. Kepemilikan Kamar Mandi dan Jamban :</string>
    <string name="title_water_source_distance">4. Jarak Sumber Air Minum ke TPA Tinja :</string>
    <string name="title_source_of_drinking_water">5. Sumber Air Minum :</string>
    <string name="title_electric_source">6. Sumber Listrik :</string>
    <string name="title_full_house_area">1. Luas Rumah (M²) :</string>
    <string name="title_number_of_occupants">2. Jumlah Penghuni (Orang) :</string>
    <string name="title_roofing_material">1. Material Atap Terluas :</string>
    <string name="title_roof_condition">2. Kondisi Atap :</string>
    <string name="title_wall_material">3. Material Dinding Terluas :</string>
    <string name="title_wall_condition">4. Kondisi Dinding :</string>
    <string name="title_floor_material">5. Material Lantai Terluas :</string>
    <string name="title_floor_condition">6. Kondisi Lantai :</string>
    <string name="imageview">imageView</string>
    <string name="msg_error_empty">Wajib Diisi</string>
    <string name="title_lokasi_survey">Lokasi Tempat yang Disurvei</string>
    <string name="kurang_dari"><![CDATA[< 10 Meter]]></string>
    <string name="lebih_dari"><![CDATA[> 10 Meter]]></string>
    <string name="title_succes_survey">Terimakasih telah melakukan survey.</string>
    <string name="subtitle_success_survey">Tanggapan Anda telah kami rekam dan berhasil masuk database.</string>
    <string name="title_back_to_menu">Kembali ke Menu Utama</string>
    <string name="title_page_survey">Survey</string>
    <string name="sub_title_page_survey">Identifikasi Rumah Tidak Layak Huni</string>
    <string name="title_detail_page_hasil_survey">Detail Hasil Survey</string>
    <string name="sub_title_detail_page_hasil_survey">Identifikasi Rumah Tidak Layak Huni</string>
    <string name="title_identitas_surveyor">Identitas Surveyor</string>
    <string name="text_nama_surveyor">Nama Surveyor</string>
    <string name="isi_data">-</string>
    <string name="text_email_surveyor">Email Surveyor</string>
    <string name="text_no_hp_surveyor">No. HP</string>
    <string name="isi_no_hp_surveyor">-</string>
    <string name="text_no_ktp">No. KTP</string>
    <string name="text_alamat_surveyor">Alamat</string>
    <string name="text_lokasi_tempat_yang_disurvey">Lokasi Tempat yang Disurvey</string>
    <string name="text_nama_desa_kelurahan">Nama Desa/Kelurahan</string>
    <string name="text_nama_kecamatan">Nama Kecamatan</string>
    <string name="text_nama_kabupaten_kota">Nama Kabupaten/Kota</string>
    <string name="text_nama_provinsi">Nama Provinsi</string>
    <string name="text_tanggal_waktu_survey_tempat">Tanggal/Waktu Survey Tempat</string>
    <string name="title_identitas_penghuni_rumah">Identitas Penghuni Rumah</string>
    <string name="text_foto_kondisi_atap_rumah_yang_disurvey">Foto Kondisi Atap Rumah Yang Disurvey :</string>
    <string name="text_foto_kondisi_dinding_rumah_yang_disurvey">Foto Kondisi Dinding Rumah Yang Disurvey :</string>
    <string name="text_foto_kondisi_lantai_rumah_yang_disurvey">Foto Kondisi Lantai Rumah Yang Disurvey :</string>
    <string name="title_kondisi_fisik_rumah_pada_aspek_keselamatan">Kondisi Fisik Rumah Pada Aspek Keselamatan</string>
    <string name="title_kondisi_fisik_rumah_pada_aspek_kesehatan">Kondisi Fisik Rumah Pada Aspek Kesehatan</string>
    <string name="title_aspek_persyaratan_luas_dan_kebutuhan_ruang">Aspek Persyaratan Luas dan Kebutuhan Ruang</string>
    <string name="title_aspek_komponen_bahan_bangunan_sesuai_konteks_lokal">Aspek Komponen Bahan Bangunan Sesuai Konteks Lokal</string>
    <string name="ttile_hasil_survey">Hasil Survey</string>
    <string name="sub_title_pendataan_rumah_tidak_layak_huni">Identifikasi Rumah Tidak Layak Huni</string>
    <string name="title_aplikasi_pendataan_nrumah_tidak_layak_huni">Survey Identifikasi Rumah Tidak Layak Huni</string>
    <string name="text_button_login">Login</string>
    <string name="title_kementrian_pekerjaan_umum_dan_perumahan_rakyat_ndirektorat_jendral_penyediaan_rumah_ndirektorat_rumah_swadaya">Kementrian Pekerjaan Umum dan Perumahan Rakyat\nDirektorat Jendral Penyediaan Rumah\nDirektorat Rumah Swadaya</string>
    <string name="text_selamat_datang">Selamat Datang</string>
    <string name="text_panggilan">Bapak</string>
    <string name="text_nama">Andi Chairunnas</string>
    <string name="title_halaman_utama">Halaman Utama</string>
    <string name="text_aplikasi_pendataan_rumah_tidak_layak_huni">Aplikasi Survey Identifikasi Rumah Tidak Layak Huni</string>
    <string name="text_button_survey">Survey\nSekarang</string>
    <string name="text_button_hasil_survey">Hasil\nSurvey</string>
    <string name="text_foot_title">Demo Aplikasi Pendataan Rumah</string>
    <string name="title_halaman_register">Halaman Register</string>
    <string name="no_ktp">No. KTP</string>
    <string name="password">Password</string>
    <string name="jk_pria">Pria</string>
    <string name="jk_wanita">Wanita</string>
    <string name="no_hp_aktif">No. HP Aktif</string>
    <string name="text_email">Email</string>
    <string name="text_alamat_tempat_tinggal">Alamat Tempat Tinggal</string>
    <string name="sub_kementrian_pekerjaan_umum_dan_perumahan_rakyat_ndirektorat_jendral_penyediaan_rumah_ndirektorat_rumah_swadaya">Kementrian Pekerjaan Umum dan Perumahan Rakyat\nDirektorat Jendral Penyediaan Rumah\nDirektorat Rumah Swadaya</string>
    <string name="text_selanjutnya">Selanjutnya</string>
    <string name="text_sebelumnya">Sebelumnya</string>
    <string name="text_ada">Ada</string>
    <string name="text_tidak_ada">Tidak Ada</string>
    <string name="text_selesai">Selesai</string>
    <string name="text_pria">Pria</string>
    <string name="text_wanita">Wanita</string>
    <string name="text_unggah_foto_atap">Unggah Foto Atap</string>
    <string name="text_unggah_foto_dinding">Unggah Foto Dinding</string>
    <string name="text_unggah_foto_lantai">Unggah Foto Lantai</string>
    <string name="text_rawan_air">Rawan Air</string>
    <string name="text_kek">KEK</string>
    <string name="text_perbatasan">Perbatasan</string>
    <string name="text_pulau_pulau_kecil_terluar">Pulau-pulau Kecil/Terluar</string>
    <string name="text_daerah_tertinggal_dan_terpencil">Daerah Tertinggal dan Terpencil</string>
    <string name="text_kumuh">Kumuh</string>
    <string name="text_kspn">KSPN</string>
    <string name="text_pesisir_nelayan">Pesisir/Nelayan</string>
    <string name="text_transmigrasi">Transmigrasi</string>
    <string name="text_pemilik_rumah">Pemilik Rumah</string>
    <string name="text_alamat_pemilik_rumah">Alamat Pemilik Rumah</string>
    <string name="text_disurvey_oleh">Disurvey Oleh</string>
    <string name="text_tanggal_survey">Tanggal Survey</string>
    <string name="text_hasil_pemilik_rumah">Pemilik Rumah :</string>
    <string name="text_hasil_alamat_pemilik_rumah">Alamat Pemilik Rumah :</string>
    <string name="text_hasil_disurvey_oleh">Disurvey Oleh :</string>
    <string name="text_hasil_tanggal_survey">Tanggal Survey :</string>
    <string name="foto_kondisi_atap">4. Foto Kondisi Atap :</string>
    <string name="ambil_foto_atap">Ambil Foto Atap</string>
    <string name="foto_kondisi_dinding">7. Foto Kondisi Dinding :</string>
    <string name="ambil_foto_dinding">Ambil Foto Dinding</string>
    <string name="foto_kondisi_lantai">10. Foto Kondisi Lantai :</string>
    <string name="upload_image">Upload Image</string>
    <string name="disurvey_oleh">disurvey oleh:</string>
    <string name="dibuat_tanggal">dibuat tanggal:</string>
    <string name="waktu_survey_tanggal_dan_jam">13 Sep 2020 08:00 AM</string>
    <string name="detail_data_survey">Detail Data Survey</string>
    <string name="fotoKondisiKolom1">fotoKondisiKolom1</string>
    <string name="fotoKondisiKolom2">fotoKondisiKolom2</string>
    <string name="fotoKondisiKolom3">fotoKondisiKolom3</string>
    <string name="fotoKondisiKonstruksiAtap1">fotoKondisiKonstruksiAtap1</string>
    <string name="fotoKondisiKonstruksiAtap2">fotoKondisiKonstruksiAtap2</string>
    <string name="fotoKondisiKonstruksiAtap3">fotoKondisiKonstruksiAtap3</string>
    <string name="fotoKondisiAtap1">fotoKondisiAtap1</string>
    <string name="fotoKondisiAtap2">fotoKondisiAtap2</string>
    <string name="fotoKondisiAtap3">fotoKondisiAtap3</string>
    <string name="fotoKondisiDinding1">fotoKondisiDinding1</string>
    <string name="fotoKondisiDinding2">fotoKondisiDinding2</string>
    <string name="fotoKondisiDinding3">fotoKondisiDinding3</string>
    <string name="fotoKondisiLantai1">fotoKondisiLantai1</string>
    <string name="fotoKondisiLantai2">fotoKondisiLantai2</string>
    <string name="fotoKondisiLantai3">fotoKondisiLantai3</string>
    <string name="title_anonime">Anonime</string>
</resources>