<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".addsurvey.PageSevenFragment">

    <TextView
        android:id="@+id/textView1"
        style="@style/MyTemaH2"
        android:text="@string/title_succes_survey"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationViewSatu"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/database" />

    <TextView
        android:id="@+id/textView2"
        style="@style/MyTemaH3"
        android:text="@string/subtitle_success_survey"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/separator_size_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationViewSatu" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMainMenu"
        style="@style/MyTemaH2"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/separator_size_10"
        android:letterSpacing="0"
        android:text="@string/title_back_to_menu"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/bgBiru"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>